Ajout de la section activité et du footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="main-container">
         <header>
             <img src="images/logo/Booki.png" alt="Logo Booki">
-            <nav>
+            <nav id="main-nav">
                 <a href="#hebergements">Hébergements</a>
                 <a href="#activites">Activités</a>
             </nav>
@@ -168,7 +168,7 @@
                             </article>
                         </a>
                     </div>
-                    <p class="section-text">Afficher plus</p>
+                    <a href="#" class="section-text">Afficher plus</a>
                 </section>
                 <section class="populaires">
                     <div class="populaires-title">
@@ -237,18 +237,65 @@
                 </section>
             </div>
             <section id="activites">
-                <p>a</p>
-                <p>a</p>
-                <p>a</p>
-                <p>a</p>
-                <p>a</p>
-                <p>a</p>
-                <p>a</p>
-                <p>a</p>
-                <p>a</p>
+                <div class="populaires-title">
+                    <h2 class="section-title">Activités à Marseille</h2>
+                </div>
+                <div class="activites-cards">
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/activites/reno-laithienne.jpg" alt="Image du vieux port">
+                            <div class="card-content">
+                                <h3 class="card-title">Vieux-Port</h3>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/activites/paul-hermann.jpg" alt="Image du fort de Pomègues">
+                            <div class="card-content">
+                                <h3 class="card-title">Fort de Pomègues</h3>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/activites/kilyan-sockalingum.jpg" alt="Image du parc national des Calanques">
+                            <div class="card-content">
+                                <h3 class="card-title">Parc national des Calanques</h3>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="card">
+                            <img src="./images/activites/florian-wehde.jpg" alt="Image de Notre-Dame-de-la-Garde">
+                            <div class="card-content">
+                                <h3 class="card-title">Notre-Dame-de-la-Garde</h3>
+                            </div>
+                        </article>
+                    </a>
+                </div>
             </section>
         </main>
-        <footer></footer>
+        <footer>
+            <nav id="footer-nav">
+                <div class="footer-section">
+                    <p class="section-text">A propos</p>
+                    <a href="#">Fonctionnement du site</a>
+                    <a href="#">Conditions générales</a>
+                    <a href="#">Données et confidentialité</a>
+                </div>
+                <div class="footer-section">
+                    <p class="section-text">Nos hébergements</p>
+                    <a href="#">Charte qualité</a>
+                    <a href="#">Proposer votre hôtel</a>
+                </div>
+                <div class="footer-section">
+                    <p class="section-text">Assistance</p>
+                    <a href="#">Centre d'aide</a>
+                    <a href="#">Nous contacter</a>
+                </div>
+            </nav>
+        </footer>
     </div>
 </body>
 
