Responsive tablette complet + sur mobile : header, formulaire de recherche et filtre

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="filtres">
                     <p class="section-text">Filtres</p>
                     <div class="choix">
-                        <button class="filtre-button section-text"><i class="fa-solid fa-money-bill-wave"></i>Economique</button>
+                        <button class="filtre-button section-text"><i class="fa-solid fa-money-bill-wave"></i>Économique</button>
                         <button class="filtre-button section-text"><i class="fa-solid fa-person"></i>Familial</button>
                         <button class="filtre-button section-text"><i class="fa-solid fa-heart"></i>Romantique</button>
                         <button class="filtre-button section-text"><i class="fa-solid fa-fire"></i>Nos pépites</button>
@@ -279,7 +279,7 @@
         <footer>
             <nav id="footer-nav">
                 <div class="footer-section">
-                    <p class="section-text">A propos</p>
+                    <p class="section-text">À propos</p>
                     <a href="#">Fonctionnement du site</a>
                     <a href="#">Conditions générales</a>
                     <a href="#">Données et confidentialité</a>
