Correctif après revue du projet

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <section class="recherche-et-filtres">
                 <h1 class="section-title">Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p class="recherche-subtitle">En plein centre-ville ou en pleine nature</p>
-                <form method="get" action="" class="form-recherche">
+                <form method="get" class="form-recherche">
                     <div class="form-logo">
                         <i class="fa-solid fa-location-dot"></i>
                     </div>
                     <input type="text" name="recherche-input" size="16" value="Marseille, France" class="form-text section-text">
-                    <input type="submit" value="Rechercher" class="form-submit section-text">
-                    <input type="submit" value="&#xf002;" class="form-submit-logo">
+                    <button type="submit" class="form-submit section-text">Rechercher</button>
+                    <button type="submit" class="fa-solid fa-magnifying-glass form-submit-logo"></button>
                 </form>
                 <div class="filtres">
                     <p class="section-text">Filtres</p>
